--- a/6ch/ch-06.md
+++ b/6ch/ch-06.md
@@ -32,7 +32,7 @@ class Point {
 }
 ```
 
-반면, 추상적인 Vehicle 클래스는 자동차 연료 상태를 백분율이라는 추상적인 개념으로 알려준다. 이 정보가 어디서 오는지는 전혀 들어나지 않는다.
+반면, 추상적인 Vehicle 클래스는 자동차 연료 상태를 백분율이라는 추상적인 개념으로 알려준다. 이 정보가 어디서 오는지는 전혀 드러나지 않는다.
 
 이렇듯 자료를 세세하게 공개하기 보다는 추상적인 개념으로 클래스를 표한하는 편이 좋다. 추상화는 단순히 조회/설정 함수만으로는 이뤄지지 않기에 개발자는 객체가 포함하는 자료를 표현할 가장 좋은 방법을 고민해야한다.
 
