docs: 예제 코드 수정

--- a/8ch/ch-08.md
+++ b/8ch/ch-08.md
@@ -31,7 +31,7 @@ class Sensors {
     this.sensors = new HashMap();
   }
   getById(id) {
-    return sensors.get(id);
+    return this.sensors.get(id);
   }
 }
 ```
