--- a/8ch/ch-08.md
+++ b/8ch/ch-08.md
@@ -44,7 +44,7 @@ class Sensors {
 
 ## log4j 익히기
 
-로깅 기능을 직접 구현하는 대신 아파치의 log4j 패키지를 사용하려 한다고 가정하자. 라이브러리 문서를 모두 읽어 라이브러리 사용 방식을 익히는 것이 아닌, 학습 테스트를 작성하며 발생하는 에러를 해결하고 그 과정에서 학습할 수 있다. 이 과정에서 얻은 지식을 단위 단위테스트로 정리하고 독자적인 클래스로 분리하면 나머지 클래스에서는 해당 라이브러리의 경계 인터페이스를 몰라도 된다.
+로깅 기능을 직접 구현하는 대신 아파치의 log4j 패키지를 사용하려 한다고 가정하자. 라이브러리 문서를 모두 읽어 라이브러리 사용 방식을 익히는 것이 아닌, 학습 테스트를 작성하며 발생하는 에러를 해결하고 그 과정에서 학습할 수 있다. 이 과정에서 얻은 지식을 단위테스트로 정리하고 독자적인 클래스로 분리하면 나머지 클래스에서는 해당 라이브러리의 경계 인터페이스를 몰라도 된다.
 
 1. 화면에 'hello'를 출력하는 테스트 케이스를 작성한다.
 2. 테스트 케이스를 돌리니 Appender가 필요하다는 오류 발생 > Appender 생성 후 테스트 케이스 다시 시작
@@ -72,5 +72,6 @@ class Sensors {
 - 외부 패키지를 호출하는 코드를 가능한 줄여 경계를 관리하자.
   - 새로운 클래스토 경계를 감싼다.
   - ADAPTER 패턴을 사용해 우리가 원하는 인터페이스를 패키지가 제공하는 인터페이스로 변환한다.
+ > * ADAPTER 패턴은 클래스의 인터페이스를 사용자가 원하는, 사용하고자 하는 다른 인터페이스로 변환하는 패턴으로, 서로 호환성이 전혀 없는 인터페이스를 사용하는 클래스들이 상호 호환되게끔 하여 함께 동작할 수 있도록 해준다. Wrapper 패턴이라고도 부른다.
 
 이러한 방식으로 경계를 관리하였을 때 코드 가독성이 높아지며, 경계 인터페이스를 사용하는 일관성도 높아진다. 또한 외부 패키지가 변했을 때 변경할 코드도 줄어든다.
