--- a/9ch/ch-09.md
+++ b/9ch/ch-09.md
@@ -4,7 +4,7 @@
 
 ## TDD 법칙 세가지
 
-TDD는 실제 코드를 짜기 전에 단위 테스트부터 짜라고 요구한다. 이외에도 여러 법칙이 존재한다.
+**TDD는 실제 코드를 짜기 전에 단위 테스트부터 짜라고 요구**한다. 이외에도 여러 법칙이 존재한다.
 
 - **첫째 법칙:** 실패하는 단위 테스트를 작성할 때까지 실제 코드를 작성하지 않는다.
 - **둘째 법칙:** 컴파일은 실패하지 않으면서 실행이 실패하는 정도로만 단위 테스트를 작성한다.
@@ -14,7 +14,7 @@ TDD는 실제 코드를 짜기 전에 단위 테스트부터 짜라고 요구한
 
 이렇게 일하면 실제 코드를 사실상 전부 테스트하는 테스트 케이스가 나온다. 하지만, **실제 코드와 맞먹을 정도로 방대한 테스트 코드는 심각한 관리 문제를 유발하기도 한다.**
 
-## 꺠끗한 테스트 코드 유지하기
+## 깨끗한 테스트 코드 유지하기
 
 **항상 문제는 실제 코드가 진화하면 테스트 코드도 변해야하는데 있다.** 테스트 코드가 지저분할수록 변경하기 어려워진다.
 
@@ -28,9 +28,9 @@ TDD는 실제 코드를 짜기 전에 단위 테스트부터 짜라고 요구한
 
 테스트 커버리지가 높을수록 공포는 줄어든다.
 
-## 꺠끗한 테스트 코드
+## 깨끗한 테스트 코드
 
-꺠끗한 테스트 코드를 만들려면 3가지가 필요하다. **가독성, 가독성, 가독성.**
+깨끗한 테스트 코드를 만들려면 3가지가 필요하다. **가독성, 가독성, 가독성.**
 
 ```typescript
 describe("test get page", () => {
@@ -76,7 +76,7 @@ describe("test get page", () => {
 });
 ```
 
-BUILD-OPERATE-CHECK 패턴이 위와 같은 테스트 구조에 적합하다.
+**BUILD-OPERATE-CHECK 패턴**이 위와 같은 테스트 구조에 적합하다.
 
 - **BUILD:** 테스트 자료를 만든다.
 - **OPERATE:** 테스트 자료를 조작한다.
@@ -151,13 +151,13 @@ describe("Enviroment Controller Test", () => {
 
 또한, 테스트 환경은 자원이 제한적일 가능성이 낮다. 대개 메모리나 CPU 효율과 관련 있는 경우는 드물다.
 
-**코드의 꺠끗함과는 철저히 무관하다.**
+**코드의 깨끗함과는 철저히 무관하다.**
 
 ## 테스트 당 assert 하나 && 테스트 당 개념 하나
 
 assert 문이 단 하나인 함수는 결론이 하나라서 코드를 이해하기 쉽고 빠르다.
 
-아래 함수는 given-when-then 이라는 관례를 사용하여 작성했다.
+아래 함수는 **given-when-then** 이라는 관례를 사용하여 작성했다.
 
 ```typescript
 describe("test get page", () => {
@@ -185,14 +185,16 @@ describe("test get page", () => {
 });
 ```
 
-불행히도, 테스트를 분리하면 중복되는 코드가 많아진다. TEMPLATE METHOD 패턴이나, @Before 함수등으로 해결할 수 있겠지만, assert 문을 여럿 사용하는 편이 좋이보인다.
+불행히도, 테스트를 분리하면 중복되는 코드가 많아진다. **TEMPLATE METHOD 패턴**이나, **@Before 함수**등으로 해결할 수 있겠지만, assert 문을 여럿 사용하는 편이 좋이보인다.
 
-**때로는 주저 없이 함수 하나에 여러 assert 문을 넣기도 해야 한다. 단지, assert 문 개수는 최대한 줄이는게 좋다.**
+때로는 주저 없이 함수 하나에 여러 assert 문을 넣기도 해야 한다. 단지, assert 문 개수는 최대한 줄이는게 좋다.
 
-- 개념 당 assert 문 수를 최소로 줄여라
-- 테스트 함수 하나는 개념 하나만 테스트하라
+- **개념 당 assert 문 수를 최소로 줄여라**
+- **테스트 함수 하나는 개념 하나만 테스트하라**
 
 ## F.I.R.S.T
+
+깨끗한 테스트는 다음 다섯가지 규칙을 따른다.
 
 - **Fast(빠르게): 테스트는 빨라야 한다.**
   - 느리면 코드를 마음껏 정리하지 못하고, 결국 코드 품질이 망가지기 시작한다.
@@ -213,4 +215,4 @@ describe("test get page", () => {
 - 표현력을 높이고 간결하게 정리하자.
 - 테스트 API를 구현해 도메인 특화 언어(DSL)을 만들자.
 
-**테스트 코드가 방치되어 망가지면 실제 코드도 망가진다. 테스트 코드를 꺠끗하게 유지하자.**
+**테스트 코드가 방치되어 망가지면 실제 코드도 망가진다. 테스트 코드를 깨끗하게 유지하자.**
