docs: 오탈자 수정

--- a/8ch/ch-08.md
+++ b/8ch/ch-08.md
@@ -70,7 +70,7 @@ class Sensors {
 - 기대치를 정의하는 테스트 케이스도 작성한다.
 - 통제가 불가능한 외부 패키지에 의존하는 대신 통제가 가능한 우리 코드에 의존하는 편이 좋다.
 - 외부 패키지를 호출하는 코드를 가능한 줄여 경계를 관리하자.
-  - 새로운 클래스토 경계를 감싼다.
+  - 새로운 클래스로 경계를 감싼다.
   - ADAPTER 패턴을 사용해 우리가 원하는 인터페이스를 패키지가 제공하는 인터페이스로 변환한다.
  > * ADAPTER 패턴은 클래스의 인터페이스를 사용자가 원하는, 사용하고자 하는 다른 인터페이스로 변환하는 패턴으로, 서로 호환성이 전혀 없는 인터페이스를 사용하는 클래스들이 상호 호환되게끔 하여 함께 동작할 수 있도록 해준다. Wrapper 패턴이라고도 부른다.
 
