--- a/9ch/ch-09.md
+++ b/9ch/ch-09.md
@@ -201,7 +201,7 @@ describe("test get page", () => {
 - **Independent(독립적으로): 각 테스트는 서로 의존하면 안 된다.**
   - 테스트가 서로에게 의존하면 하나가 실패할 때 나머지도 잇달아 실패하여, 원인을 진단하기 어렵고 후반 테스트가 찾아내야할 결함을 찾기 어렵다.
 - **Repeatable(반복가능하게): 테스트는 어떤 환경에서도 반복 가능해야 한다.**
-  - 환경이 적절히 지원하지 못하면, 테스트가 실패한 이유를 둘러댈 변경이 생낀다.
+  - 환경이 적절히 지원하지 못하면, 테스트가 실패한 이유를 둘러댈 변명이 생낀다.
 - **Self-Validating(자기검증하는): 테스트는 `부울(bool)`값으로 결과를 내야 한다.**
   - 테스트 스스로가 성공과 실패를 가늠하지 않는다면, 판단은 주관적이 되며 지루한 수작업 평가가 필요하게 된다.
 - **Timely(적시에): 테스트는 적시에 작성해야 한다.**
